<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Friend Account Info -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/friend_head_img"
            android:layout_width="@dimen/head_profile_middle_size"
            android:layout_height="@dimen/head_profile_middle_size"
            android:layout_gravity="center_vertical"
            tools:src="@drawable/headicon_active"/>
        <TextView
            android:id="@+id/friend_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/darkGray"
            tools:text="Friend"/>
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_arrow_downward_black"/>
    <!-- Account Info -->
    <include
        layout="@layout/part_account_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dp"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/gray"
            android:text="@string/info_question"/>
        <TextView
            android:id="@+id/account_question_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_middle"
            android:textColor="@color/black"
            tools:text="要有多勇敢，才能念念不忘?"/>
    </LinearLayout>

    <!-- Answer -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/answer_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_answer"
            android:imeActionId="@+id/answer_ime"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/check_answer_btn"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_check_answer"
        android:textStyle="bold"/>

</LinearLayout>